@@ -5,33 +5,27 @@
 ### install fortran
 
 gcc-fortran arpack
-r mpdecimal gnuplot
+mpdecimal gnuplot
 
 ### install python modules
 
 python-tabulate
 python-matplotlib
 python-bottleneck
-python-statsmodels
 python-scikit-learn
 python-h5py-openmpi
 python-pandas-datareader
-python-numpy python-rpy2
-python-sphinx python-dask
 python-sympy python-scipy
-python-gnuplot python-yaml
-python-seaborn python-patsy
-python-pytables python-tqdm
-python-pandas python-numexpr
+python-gnuplot python-tqdm
+python-numpy python-pandas
+python-pytables python-numexpr
 python-pyarrow python-openpyxl
 
 ### install python additional
 
-python-setuptools-scm
 python-beautifulsoup4
 python-flit python-cffi
-python-pillow python-pyaudio
-python-invoke python-sounddevice
+python-sphinx python-yaml
 
 ### install texlive
 
@@ -59,11 +53,6 @@ python-opencv vtk
 - https://aur.archlinux.org/packages/python-soundfile/
 - https://aur.archlinux.org/packages/python-pyfftw/
 
-### install r programming
-
-- https://aur.archlinux.org/packages/littler/
-- https://aur.archlinux.org/packages/rstudio-desktop-bin/
-
 ### install shell additional
 
 - https://aur.archlinux.org/packages/ttyplot-git/
@@ -82,64 +71,6 @@ python-opencv vtk
 --------------------------------------------------------------------------------
 
 ## Configurations
-
-### configure r programming
-
-- [CRAN MIRRORs](https://cran.r-project.org/mirrors.html)
-- [Packages](https://support.posit.co/hc/en-us/articles/201057987-Quick-list-of-useful-R-packages)
-- [Tutorial](https://www.tutorialspoint.com/r/index.htm)
-
-```sh
-mkdir -p $HOME/R/library
-echo ".libPaths(\"$HOME/R/library\")" | tee ~/.Rprofile
-echo '.First <- function() {
-  message("User: ", Sys.getenv("USER"), "\n", "WorkDir: ", getwd())
-}
-local({
-  r <- getOption("repos")
-  r["CRAN"] <- "https://mirror.aarnet.edu.au/pub/CRAN/"
-  options(repos = r)
-  options(timeout = 120)
-})' | tee -a ~/.Rprofile
-
-R -e 'print(R.version.string)'
-R -e 'print(.libPaths())'
-R -e 'print(library())'
-
-R -e 'install.packages("languageserver")'
-vim -c "CocInstall coc-r-lsp"
-
-# alternative little-r
-#R -e 'install.packages("littler")'
-#echo 'export PATH=$PATH:~/R/library/littler/bin' | tee -a ~/.bashrc
-```
-
-```sh
-r -e 'print(R.version.string);print(.libPaths())'
-r -e 'print(library())'
-
-r -e 'install.packages(c("ImportExport","tidymodels","tidyverse","markdown"))'
-r -e 'install.packages(c("randomForest","party","survival","haven","jsonlite"))'
-r -e 'install.packages(c("streamR","shiny","httpgd","GGally","plyr","plotrix"))'
-
-#sudo R CMD javareconf
-#r -e 'install.packages("xlsx")'
-#r -e 'options(java.parameters = c("-XX:+UseConcMarkSweepGC", "-Xmx2048m"))'
-#r -e 'library(xlsx)'
-```
-
-```sh
-# using VSCode
-
-code --force --install-extension reditorsupport.r
-```
-
-```sh
-# RStudio menu
-
-sudo sed -i 's#Development;IDE;#Math;Education;#g' \
-/usr/share/applications/rstudio.desktop
-```
 
 ### configure texstudio
 
