@@ -15,6 +15,9 @@ linux-zen linux-zen-headers
 ## install academic tools
 
 audacity sox
+r python-rpy2
+python-pyaudio
+python-sounddevice
 
 --------------------------------------------------------------------------------
 
@@ -56,6 +59,8 @@ audacity sox
 
 ## install academic tools
 
+- https://aur.archlinux.org/packages/littler/
+- https://aur.archlinux.org/packages/rstudio-desktop-bin/
 - https://aur.archlinux.org/packages/roomeqwizard/
 - https://aur.archlinux.org/packages/wavesurfer/
 - https://aur.archlinux.org/packages/snack/
@@ -78,6 +83,7 @@ audacity sox
 - https://github.com/mekatronik-achmadi/archmate/tree/main/pkgbuilds/unused/discord/
 - https://github.com/mekatronik-achmadi/archmate/tree/main/pkgbuilds/unused/telegram/
 - https://github.com/mekatronik-achmadi/archmate/tree/main/pkgbuilds/unused/packettracer/
+- https://github.com/mekatronik-achmadi/archmate/tree/main/pkgbuilds/unused/youtubemusic/
 
 ### install additional themes
 
@@ -181,6 +187,64 @@ sudo ln -svf /opt/packettracer/packettracer /usr/bin/packettracer
 ```
 
 ### configure campus tools
+
+#### r programming
+
+- [CRAN MIRRORs](https://cran.r-project.org/mirrors.html)
+- [Packages](https://support.posit.co/hc/en-us/articles/201057987-Quick-list-of-useful-R-packages)
+- [Tutorial](https://www.tutorialspoint.com/r/index.htm)
+
+```sh
+mkdir -p $HOME/R/library
+echo ".libPaths(\"$HOME/R/library\")" | tee ~/.Rprofile
+echo '.First <- function() {
+  message("User: ", Sys.getenv("USER"), "\n", "WorkDir: ", getwd())
+}
+local({
+  r <- getOption("repos")
+  r["CRAN"] <- "https://mirror.aarnet.edu.au/pub/CRAN/"
+  options(repos = r)
+  options(timeout = 120)
+})' | tee -a ~/.Rprofile
+
+R -e 'print(R.version.string)'
+R -e 'print(.libPaths())'
+R -e 'print(library())'
+
+R -e 'install.packages("languageserver")'
+vim -c "CocInstall coc-r-lsp"
+
+# alternative little-r
+#R -e 'install.packages("littler")'
+#echo 'export PATH=$PATH:~/R/library/littler/bin' | tee -a ~/.bashrc
+```
+
+```sh
+r -e 'print(R.version.string);print(.libPaths())'
+r -e 'print(library())'
+
+r -e 'install.packages(c("ImportExport","tidymodels","tidyverse","markdown"))'
+r -e 'install.packages(c("randomForest","party","survival","haven","jsonlite"))'
+r -e 'install.packages(c("streamR","shiny","httpgd","GGally","plyr","plotrix"))'
+
+#sudo R CMD javareconf
+#r -e 'install.packages("xlsx")'
+#r -e 'options(java.parameters = c("-XX:+UseConcMarkSweepGC", "-Xmx2048m"))'
+#r -e 'library(xlsx)'
+```
+
+```sh
+# using VSCode
+
+code --force --install-extension reditorsupport.r
+```
+
+```sh
+# RStudio menu
+
+sudo sed -i 's#Development;IDE;#Math;Education;#g' \
+/usr/share/applications/rstudio.desktop
+```
 
 #### matlab
 
